# age_and_gender_recognition

./: .gitignore  Makefile  README.md  pyproject.toml  utkface_metadata_gen.ipynb
.devcontainer/: devcontainer.json  install-dev-tools.sh  setup.sh
config/: core.py  metadata_cleaning_config.yaml  model_config.yaml  model_training_config.yaml
scripts/: extract_and_clean_metadata.py  generate_metadata.py  hparam_tuning.py  train.py  train_production_model.py
serving/: .dockerignore  Dockerfile  api.py  client.py  pyproject.toml
src/: core.py  data.py  datasets.py  metadata_handling.py  modelling.py  training.py
tests/: test_client.py
